--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -80,12 +80,13 @@
 	.ThanksH2 {
 		color: #04090c;
 		font-size: 2.5rem;
-		margin-left: 50px;
+		text-align: center;
 	}
 	
 	.ThanksP {
 		font-size: 1.5rem;
 		font-weight: bold;
+		text-align: center;
 	}
 
 }
